--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "less": "^2.3.1",
     "multer": "^1.2.0",
     "nodemailer": "0.7.1",
+    "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "superagent": "^2.2.0"
   }
